add target generated sources
